# BdtracksV2

./: ENERGY_CALCULATOR_IMPLEMENTATION_GUIDE.md  ENERGY_CALCULATOR_README.md  PHOTOVOLTAIC_CALCULATOR_PLAN.md  PHOTOVOLTAIC_CALCULATOR_README.md  PHOTOVOLTAIC_IMPLEMENTATION_GUIDE.md  README.md
backend/: .env  README.md  alembic.ini  cpanel_setup.py  process_commodity_data.py  pyproject.toml  requirements.txt  reset_db.py
backend/alembic/: env.py
backend/alembic/versions/: 041b9276171e_remove_min_max_price_from_commodity.py  13e93b623d2d_drop_supply_chain_tables.py  1e4f25f02676_add_location_table.py  25a52ce713af_add_name_field_to_price_record_model.py  516a822ba6d5_add_name_field_to_price_record_model.py  6bec24d04fc9_initial_migration.py  6d2659360b2d_add_all_accident_data_table.py  6ec5ca3de3de_description_of_changes.py  7f99fe3a3014_add_accident_data_table.py  83c623dc6903_seed_commodities_and_regions.py  c732ee5fa4ff_add_accident_data_table.py  db53a0611bee_add_indexes_to_price_record_model.py
backend/app/: __init__.py  main.py
backend/app/core/: config.py  security.py
backend/app/crud/: __init__.py  base.py  crud_accident_data.py  crud_all_accidents_data.py  crud_commodity.py  crud_location.py  crud_price_record.py  crud_region.py  crud_user.py
backend/app/db/: base.py  base_class.py  init_db.py  session.py  setup_relationships.py
backend/app/models/: __init__.py  accident_data.py  all_accidents_data.py  commodity.py  location.py  price_history.py  price_record.py  region.py  supply_chain_data.py  supply_chain_stage.py  user.py
frontend/: .env  (+16 more)
(+141 files in other folders)
